--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     align-items: center;
     padding-bottom: 1px solid rgba(255,255,255,0.1);
 }
-.profile .image {
+/* .profile .image {
     position: relative;
     width: 200px;
     height: 200px;
@@ -48,7 +48,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+} */
 .profile h2 {
     color: white;
     font-size: 1.4em;
